# legostocker

./: README.md  pylintrc  pyproject.toml
legostocker/: __main__.py  sets.py
tasks/: __init__.py  config.py  linting.py
