[tool.poetry]
name = "legostocker"
version = "0.1.0"
description = "Manage your LEGO collection"
authors = ["Dennis Muth <d.muth@gmx.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiosqlite = "^0.15.0"
pydantic = "^1.6.1"
fire = "^0.3.1"
pandas = "^1.1.0"
typeguard = "^2.9.1"
async-property = "^0.2.1"

[tool.poetry.dev-dependencies]
invoke = "^1.4.1"
flake8 = "^3.8.3"
pylint = "^2.5.3"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
